--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-hello it me
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <main></main>
+    <script>
+      function setup() {
+        createCanvas(400, 400);
+      }
+      function draw() {
+        background(0);
+      }
+    </script>
+  </body>
+</html>
